k8s-yaml/apitest-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-apitest
  namespace: ${CICD_GIT_REPO_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-apitest
  template:
    metadata:
      labels:
        app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-apitest
    spec:
      imagePullSecrets:
      #- name: harbor-smarthome
      - name: pipeline-docker-registry
      containers:
      - name: apitest
        image: "${CICD_IMAGE}:${CICD_GIT_COMMIT}"
        ports:
        - containerPort: 5000
