k8s-yaml/apitest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apitest-ing
spec:
#
  rules:
  - host: "apitest.${CICD_GIT_REPO_NAME}.10.20.0.74.xip.io"
    http:
      paths:
      - backend:
          serviceName: ${CICD_GIT_REPO_NAME}-apitest-svc
          servicePort: 5000
        path: "/"
        pathType: "ImplementationSpecific"
